# ai-chat-backend

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0294d382c326_migrate_to_custom_auth.py  41c2b10d3b93_initial_migration.py  468d157ad0f1_add_summary_to_chats.py  51dd453bc960_add_rag_tables.py  a07197f67b4e_add_indexes_to_user_and_chat_ids.py
app/: db.py  main.py  models.py  schemas.py  worker.py
app/core/: config.py  deps.py  rate_limiter.py  redis.py  security.py
app/routes/: auth.py  chat.py  files.py  payment.py  user.py
app/services/: chat_service.py  file_service.py  quota_service.py  rag_service.py  vector_service.py
